Fix chart-page z-index + add scss

--- a/frontend/src/app/chart-page/chart-page.component.scss
+++ b/frontend/src/app/chart-page/chart-page.component.scss
@@ -1,41 +1,44 @@
-.container {
+.container{
   position: absolute;
   z-index: -10;
-  margin-top: 50px; }
-  .container .showColumn {
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    width: 200px;
-    height: 40px;
-    color: white;
-    background: #4fa097;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 50px; }
-  .container .showLine {
-    border-radius: 20px;
-    border: none;
-    width: 200px;
-    outline: none;
-    height: 40px;
-    color: white;
-    background: #4fa097;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 50px; }
-  .container table {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 40px; }
-    .container table td {
-      width: 700px;
-      height: 50%;
-      margin-left: auto;
-      margin-right: auto;
-      display: block; }
+  margin-top: 50px;
 
-/*# sourceMappingURL=chart-page.component.css.map */
+  .showColumn{
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    width: 200px;
+    height: 40px;
+    color: white;
+    background: #4fa097;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 50px;
+  }
+
+  .showLine{
+    border-radius: 20px;
+    border: none;
+    width: 200px;
+    outline: none;
+    height: 40px;
+    color: white;
+    background: #4fa097;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 50px;
+  }
+
+  table{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 40px;
+
+    td{
+      width: 700px; height: 50%; margin-left: auto; margin-right: auto; display: block;
+    }
+  }
+}
